--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "node .",
     "build": "tsc && node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha --reporter spec -r ts-node/register 'test/**/*.ts'"
   },
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
@@ -21,6 +21,11 @@
     "ytsr": "^3.5.3"
   },
   "devDependencies": {
-    "@babel/helper-compilation-targets": "^7.15.0"
+    "@babel/helper-compilation-targets": "^7.15.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "ts-node": "^10.4.0"
   }
 }
