Redo the main Discord part and change how command modules are defined

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,8 +5,7 @@
     "OwnerCommands": [],
     "ModCommands": [],
     "AliasMode": "full",
-    "Token" : "<Replace this>",
-    "ApiKey": "<Replace this>",
+    "SoundFolderLoc": "./",
     "MessageOptions": {
         "tts": false,
         "content": "Yes"
@@ -22,5 +21,6 @@
     "DefualtVoiceOptions": {
         "type": "opus",
         "volume": 2
-    }
+    },
+    "hardSearch": false
 }
